lib/bait/tests/inout_error/fun_is_private.in.bt
import bait.tests.packages.foo

foo.private_fun()
